2005-09-29 Scott Dattalo <scott@dattalo.com>
	* gui/gui_menu.cc, gui/gui_src.h, gui/gui_src_asm.cc: More
	preferences work; now the colors for the source browser example
	text can be configured (this configuration doesn't map back into
	the source browser yet).

2005-09-28 Scott Dattalo <scott@dattalo.com>
	* src/16bit-registers.cc, src/16bit-registers.h, src/tmr0.cc,
	src/tmr0.h: The high byte of TMR0 for the 18F family was not
	updating correctly in certain circumstances (like during single
	stepping). Thanks to Robert Merkel <robert.merkel@benambra.org>
	for reporting this issue.

2005-09-27 Scott Dattalo <scott@dattalo.com>
	* gui/gui_menu.cc: Even More work on preferences dialog window.

2005-09-26 Scott Dattalo <scott@dattalo.com>
	* gui/gui_menu.cc: Even More work on preferences dialog window.

2005-09-26 Scott Dattalo <scott@dattalo.com>
	* gui/gui_menu.cc: More work on preferences dialog window.

2005-09-25 Robert Pearce <rob@bdt-home.demon.co.uk>
	* src/p12x.cc, src/p12x.h, src/p16x5x.cc, src/p16x5x.h,
	src/pic-processor.h, src/pic-processor.cc:
	Added support for the 16C56 and the 10F200.
	
2005-09-23 Scott Dattalo <scott@dattalo.com>
	* src/breakpoints.cc: Breakpoint numbers are now printed in decimal.

2005-09-23 J.R. Heisey <jrheisey@sourceforge.com>
	* cli/ui_gpsim.cc: Fixed a bug were a reused string was
	not being cleared before being appended to.

	*gui/gui_symbols.cc: Added code snippet to truncate
	multi-line symbol values.

2005-09-21 J.R. Heisey <jrheisey@sourceforge.com>
	* src/cod.cc: Added an extra test to prevent a error message
	from displaying when a non cod file attempted. This really
	should validate that the file is a cod file earlier.

2005-09-20 Scott Dattalo <scott@dattalo.com>
	* gui/gui_regwin.cc: GUIRegisterList.register_size was being set
	improperly.

2005-09-20 J.R. Heisey <jrheisey@sourceforge.com>
	* gui_processor.cc, gui_processor.h, gui_register.h,
	gui_regwin.cc, gui_watch.cc: Made changes in Register_Window